kubernetes/angular/web-app-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-2-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: web-app-2
