kubernetes/angular/web-app-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-2-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "web-app-2.localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-2-service
            port:
              number: 80
